//java 11

sourceCompatibility = 11
targetCompatibility = 11

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
  options.compilerArgs << "--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED"
  options.compilerArgs << "--add-exports=java.base/sun.reflect.generics.tree=ALL-UNNAMED"
  options.compilerArgs << "--add-exports=java.base/sun.reflect.generics.repository=ALL-UNNAMED"
}

tasks.withType(Test) {
//  jvmArgs += "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED"
//  jvmArgs += "--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED"
//  jvmArgs += "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"
}

tasks.withType(JavaExec) {
//  jvmArgs += "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED"
//  jvmArgs += "--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED"
//  jvmArgs += "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"
}